--- a/.env.production
+++ b/.env.production
@@ -2,5 +2,6 @@
 ENV = 'production'
 
 # base api
-VUE_APP_BASE_API = '/prod-api'
+VUE_APP_BASE_API = '//zxbang.suifudi.cn:7777'
+VUE_APP_UPLOAD_API = '//zxbang.suifudi.cn:7777/file/upload'
 
