系统设置+地址变更

--- a/.env.production
+++ b/.env.production
@@ -2,6 +2,6 @@
 ENV = 'production'
 
 # base api
-VUE_APP_BASE_API = '//zxbang.suifudi.cn:7777'
-VUE_APP_UPLOAD_API = '//zxbang.suifudi.cn:7777/file/upload'
+VUE_APP_BASE_API = 'https://zxbang.suifudi.cn:7777'
+VUE_APP_UPLOAD_API = 'https://zxbang.suifudi.cn:7777/file/upload'
 
