--- a/.env.development
+++ b/.env.development
@@ -2,8 +2,10 @@
 ENV = 'development'
 
 # base api
-VUE_APP_BASE_API = 'https://zxbang.suifudi.cn:7777'
-VUE_APP_UPLOAD_API = 'https://zxbang.suifudi.cn:7777/file/upload'
+ VUE_APP_BASE_API = 'https://zxbang.suifudi.cn:7777'
+ VUE_APP_UPLOAD_API = 'https://zxbang.suifudi.cn:7777/file/upload'
+# VUE_APP_BASE_API = 'https://127.0.0.1:7777'
+# VUE_APP_UPLOAD_API = 'https://127.0.0.1:7777/file/upload'
 
 # vue-cli uses the VUE_CLI_BABEL_TRANSPILE_MODULES environment variable,
 # to control whether the babel-plugin-dynamic-import-node plugin is enabled.
