--- a/.env.production
+++ b/.env.production
@@ -2,8 +2,5 @@
 ENV = 'production'
 
 # base api
- VUE_APP_BASE_API = 'https://zxbang.suifudi.cn:7777'
- VUE_APP_UPLOAD_API = 'https://zxbang.suifudi.cn:7777/file/upload'
-#VUE_APP_BASE_API = 'https://127.0.0.1:7777'
-#VUE_APP_UPLOAD_API = 'https://127.0.0.1:7777/file/upload'
-
+ VUE_APP_BASE_API = 'https://scxcyb.cn:7777'
+ VUE_APP_UPLOAD_API = 'https://scxcyb.cn:7777/file/upload'
